[r217]
- Changed maintenance scripts to use build system's prefix path.
[r218]
- Corrected error message in initfwd.c
[r219]
- Removed private callsign check for SB command because of problems with
  sending bulletins to destinations which validate with the private callsign
  check (eg. 7PLUS@WW)
[r220]
- Added notification in messages received via SMTP
[r221]
- Changed several files to reflect current maintainer on request of 
  Bernard F6BVP. He has announced he definately stopped writing code for FBB.
[r222]
- Changed read/write functions return value handling added in [r198].
[r223]
- Fixed failing duplicate message check on messages killed or archived by m_filter.
- Corrected storing incorrect message number in wfbid.sys for held messages.
[r224]
- Added feature to use whitelisting or excluding rules in reject.sys.
- Fixed error display/logging when parsing reject.sys at startup.
- Changed example reject.sys file.
[r225]
- Corrected file paths in README.
[r226]
- Fixed status command (%) output, now showing correct memory values.
- Added uptime and load average to status command (%) output.
[r227]
- Changed some build system files to add sysinfo files.
[r228]
- Fixed maintenance scripts not working after SVN commit r217.
[r229]
- Fixed issue where FBB kills wrong message with M_FILTER used after SVN r223.


SVN (Dave van der Locht)			14 November 2022
[r230]
- Modified changelog to reflect 7.0.11 release.
[r231]
- Copied SVN trunk to tags/7.0.11
[r232]
- Fixed xfbbd usage output didn't show -a argument which allows monitoring
  of outgoing frames as wel as incoming ones for socket connections.
[r233]
- Changed killproc usage in fbb shell script to pkill.
[r236]
- Fixed J command where 'incorrect port' was shown with numeric parameters.
[r237]
- Fixed J command incorrect error message when entering (invalid) port 0.
[r238]
- Modified README to inform about deprecation and future removal of the X11 
  utilities.